Modified .project file

--- a/.project
+++ b/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>src</name>
 			<type>2</type>
-			<location>/home/lattanzi/Documents/work/eclipseWorkspace/VirtualSense_SDK.1.1.0/src</location>
+			<location>/home/lattanzi/git/virtual-sense.sdk/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
